added ProjectBuilder project for cp2k
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@302 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -69,12 +69,15 @@ $(PROG): $(OBJECTS) $(LIB1_ARCHIVE)
 
 $(LIB1_ARCHIVE): $(LIB1_OBJECTS)
 	$(AR) $(LIB1_ARCHIVE) $(LIB1_OBJECTS)
+ifneq ($(RANLIB),)
+	$(RANLIB) $(LIB1_ARCHIVE)
+endif
 
 %.o: %.F
 	$(FC) -c $(FCFLAGS) $<
 
 %.d: %.F
-	$(CPP) $(CPPFLAGS) $< $*.f
+	$(CPP) $(CPPFLAGS) $< > $*.f
 	$(FORPAR) $*.f
 	$(PERL) $(SFMAKEDEPEND) $*.d $*.f
 	@rm -f $*.d.old
@@ -83,7 +86,7 @@ parallel_include.o: parallel_include.F
 	$(FC_fixed) -c $(FCFLAGS) $<
 
 parallel_include.d: parallel_include.F
-	$(CPP) $(CPPFLAGS) $< $*.f
+	$(CPP) $(CPPFLAGS) $< > $*.f
 	-$(FORPAR) -fix $*.f
 	$(PERL) $(SFMAKEDEPEND) $*.d $*.f
 	@rm -f $*.d.old
