corrected Makefile name
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@499 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile.old
+++ b/makefiles/Makefile.old
@@ -15,7 +15,7 @@ MAINLIBDIR   = $(CP2KHOME)/lib
 MAINOBJDIR   = $(CP2KHOME)/obj
 SRCDIR       = $(CP2KHOME)/src
 TOOLDIR      = $(CP2KHOME)/tools
-MAKEFILE     = $(CP2KHOME)/makefiles/Makefile
+MAKEFILE     = $(CP2KHOME)/makefiles/Makefile.old
 FORPAR       = $(CP2KHOME)/tools/forpar.x -chkint
 SFMAKEDEPEND = $(CP2KHOME)/tools/sfmakedepend -m int -s -f
 MACHINEDEFS  = $(ARCHDIR)/$(ARCH).$(VERSION)
