removed double Makefile inclusion for clean targets.
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@500 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -59,7 +59,7 @@ $(VERSION_TARGETS):
 	$(SMAKE) -f $(MAKEFILE) VERSION=$@ build
 
 $(CLEAN_TARGETS):
-	$(SMAKE) -f $(MAKEFILE) -C $(OBJDIR)/$(@D) -f $(MAKEFILE) VERSION=$(@D) $(@F)
+	$(SMAKE) -f $(MAKEFILE) -C $(OBJDIR)/$(@D) VERSION=$(@D) $(@F)
 
 include $(OBJECTDEFS)
 
