added explicit -I directive to find header files.
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@565 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -62,7 +62,8 @@ include $(MACHINEDEFS)
 
 CPPFLAGS += -D__COMPILE_ARCH="\"$(ARCH)\""\
             -D__COMPILE_DATE="\"$(shell date)\""\
-            -D__COMPILE_HOST="\"$(shell hostname)\""
+            -D__COMPILE_HOST="\"$(shell hostname)\""\
+	    -I$(SRCDIR)
 
 OBJECTS = $(OBJECTS_GENERIC) $(OBJECTS_ARCHITECTURE)
 
