added a lib routine
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@647 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -68,7 +68,7 @@ CPPFLAGS += -D__COMPILE_ARCH="\"$(ARCH)\""\
 OBJECTS = $(OBJECTS_GENERIC) $(OBJECTS_ARCHITECTURE)
 
 LIB1_OBJECTS = ctrig.o fftpre.o fftrot.o fftstp.o fast.o mltfftsg_tools.o\
-               mltfftsg.o
+               mltfftsg.o grid_fast.o
 
 DEPENDENCIES = $(OBJECTS:.o=.dep)
 
