A try to remove the machine dependent part from tools/Makefile
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@1317 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -46,7 +46,7 @@ build:
 	@echo
 	@echo "*** machine file = $(MACHINEDEFS)"
 	@echo
-	$(SMAKE) -C $(TOOLDIR) -f $(TOOLSRC)/Makefile SRCDIR=$(TOOLSRC)
+	$(SMAKE) -C $(TOOLDIR) -f $(TOOLSRC)/Makefile SRCDIR=$(TOOLSRC) CC=$(CC)
 	$(SMAKE) -C $(OBJDIR)/$(VERSION) -f $(MAKEFILE) dependencies
 	$(PMAKE) -C $(OBJDIR)/$(VERSION) -f $(MAKEFILE) all
 
