explicitely added that /bin/sh should be used
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@1346 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -1,5 +1,5 @@
 .SUFFIXES: .F .dep .o .f90 .for
-
+SHELL = /bin/sh
 # the home dir is taken from the current directory: you must cd to the makefiles
 # directory before executing make
 CP2KHOME  := $(PWD)/..
