fix for 'include file not found' warning
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@1414 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -141,4 +141,6 @@ endif
 
 ### Load the automatically generated rules of sfmakedepend ###
 
+ifneq ($(strip $(wildcard *.dep)),)
 include $(wildcard *.dep)
+endif
