prevent unpleasant things if the directory of realclean is not present...
git-svn-id: svn://svn.code.sf.net/p/cp2k/code/trunk@1482 bac0169d-1eea-4375-b5f6-f89d2ced9994

--- a/makefiles/Makefile
+++ b/makefiles/Makefile
@@ -124,10 +124,10 @@ parallel_include.dep:
 parallel_include.int: parallel_include.o
 
 clean:
-	cd $(OBJDIR)/$(VERSION) ; rm -f *.o *.mod
+	rm -f $(OBJDIR)/$(VERSION)/*.o $(OBJDIR)/$(VERSION)/*.mod
 
 realclean: clean
-	cd $(OBJDIR)/$(VERSION) ; rm -f $(PROG) *
+	rm -f $(OBJDIR)/$(VERSION)/* ; rm -f $(PROG) ; rm -f $(LIB1_ARCHIVE)
 
 distclean:
 	rm -rf $(MAINEXEDIR) $(MAINLIBDIR) $(MAINOBJDIR)
