--- a/src/common/cp_array__nametype1__utils.template
+++ b/src/common/cp_array__nametype1__utils.template
@@ -3,8 +3,7 @@
 !   Copyright (C) 2000 - 2014  CP2K developers group                          !
 !-----------------------------------------------------------------------------!
 
-#define CP_R_LESS_Q(el1,el2) ( el1 < el2 )
-
+[defines]
 
 ! *****************************************************************************
 !> \brief various utilities that regard array of different kinds:
@@ -39,33 +38,32 @@
 !>      3.2002 templatized [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-MODULE cp_array_r_utils
+MODULE cp_array_[nametype1]_utils
   USE f77_blas
-  USE kinds,                           ONLY: dp
-  USE machine,                         ONLY: m_flush
+  USE machine, ONLY: m_flush
 #include "cp_common_uses.f90"
-
+  [USE]
   IMPLICIT NONE
   PRIVATE
 
   LOGICAL, PRIVATE, PARAMETER :: debug_this_module=.TRUE.
-  CHARACTER(len=*), PARAMETER, PRIVATE :: moduleN = 'cp_array_r_utils'
+  CHARACTER(len=*), PRIVATE, PARAMETER :: moduleN='cp_array_[nametype1]_utils'
 
   ! types
-  PUBLIC :: cp_1d_r_p_type, cp_2d_r_p_type, cp_3d_r_p_type
+  PUBLIC :: cp_1d_[nametype1]_p_type, cp_2d_[nametype1]_p_type, cp_3d_[nametype1]_p_type
 
   ! generic interfaces
   PUBLIC :: cp_guarantee_size
 
   ! the underlying procedures
-  PUBLIC :: cp_1d_r_guarantee_size, &
-       cp_1d_r_write, cp_2d_r_write,&
-       cp_2d_r_guarantee_size,&
-       cp_1d_r_bsearch
+  PUBLIC :: cp_1d_[nametype1]_guarantee_size, &
+       cp_1d_[nametype1]_write, cp_2d_[nametype1]_write,&
+       cp_2d_[nametype1]_guarantee_size,&
+       cp_1d_[nametype1]_bsearch
 
   INTERFACE cp_guarantee_size
-     MODULE PROCEDURE cp_1d_r_guarantee_size,&
-          cp_2d_r_guarantee_size
+     MODULE PROCEDURE cp_1d_[nametype1]_guarantee_size,&
+          cp_2d_[nametype1]_guarantee_size
   END INTERFACE
 
 !***
@@ -76,9 +74,9 @@ MODULE cp_array_r_utils
 !>      02.2003 created [fawzi]
 !> \author fawzi
 ! *****************************************************************************
-  TYPE cp_1d_r_p_type
-     REAL(kind=dp), DIMENSION(:), POINTER :: array
-  END TYPE cp_1d_r_p_type
+  type cp_1d_[nametype1]_p_type
+     [type1], dimension(:), pointer :: array
+  end type cp_1d_[nametype1]_p_type
 
 ! *****************************************************************************
 !> \brief represent a pointer to a 2d array
@@ -86,9 +84,9 @@ MODULE cp_array_r_utils
 !>      02.2003 created [fawzi]
 !> \author fawzi
 ! *****************************************************************************
-  TYPE cp_2d_r_p_type
-     REAL(kind=dp), DIMENSION(:,:), POINTER :: array
-  END TYPE cp_2d_r_p_type
+  type cp_2d_[nametype1]_p_type
+     [type1], dimension(:,:), pointer :: array
+  end type cp_2d_[nametype1]_p_type
 
 ! *****************************************************************************
 !> \brief represent a pointer to a 3d array
@@ -96,9 +94,9 @@ MODULE cp_array_r_utils
 !>      02.2003 created [fawzi]
 !> \author fawzi
 ! *****************************************************************************
-  TYPE cp_3d_r_p_type
-     REAL(kind=dp), DIMENSION(:,:,:), POINTER :: array
-  END TYPE cp_3d_r_p_type
+  type cp_3d_[nametype1]_p_type
+     [type1], dimension(:,:,:), pointer :: array
+  end type cp_3d_[nametype1]_p_type
 
 CONTAINS
 
@@ -115,19 +113,19 @@ CONTAINS
 !>      4.2002 created [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-SUBROUTINE cp_1d_r_write(array, unit_nr, el_format, error)
-    REAL(kind=dp), DIMENSION(:), INTENT(in)  :: array
-    INTEGER, INTENT(in)                      :: unit_nr
-    CHARACTER(len=*), INTENT(in), OPTIONAL   :: el_format
-    TYPE(cp_error_type), INTENT(inout)       :: error
+SUBROUTINE cp_1d_[nametype1]_write(array, unit_nr, el_format, error)
+  [type1], DIMENSION(:), INTENT(in) :: array
+  INTEGER, INTENT(in) :: unit_nr
+  CHARACTER(len=*), INTENT(in), OPTIONAL :: el_format
+  TYPE(cp_error_type), INTENT(inout) :: error
 
-    CHARACTER(len=*), PARAMETER :: defaultFormat = "(es14.6)", &
-      routineN = 'cp_1d_r_write', routineP = moduleN//':'//routineN
+  LOGICAL :: failure
+  INTEGER :: iostat, i
+  CHARACTER(len=*), PARAMETER :: routineN='cp_1d_[nametype1]_write',&
+        routineP=moduleN//':'//routineN
+  CHARACTER(len=*), PARAMETER :: defaultFormat=[defaultFormatType1]
 
-    INTEGER                                  :: i, iostat
-    LOGICAL                                  :: failure
-
-  failure=.FALSE.
+  failure=.false.
   WRITE(unit=unit_nr,fmt="('( ')",advance="no", iostat=iostat)
   CPPrecondition(iostat==0,cp_failure_level,routineP,error,failure)
   IF (.NOT.failure) THEN
@@ -156,9 +154,9 @@ SUBROUTINE cp_1d_r_write(array, unit_nr, el_format, error)
      END IF
      WRITE(unit=unit_nr,fmt="(' )')")
   END IF
-  CALL m_flush(unit_nr)
+  call m_flush(unit_nr)
 
-END SUBROUTINE cp_1d_r_write
+END SUBROUTINE cp_1d_[nametype1]_write
 
 ! *****************************************************************************
 !> \brief writes an array to the given unit
@@ -173,21 +171,19 @@ END SUBROUTINE cp_1d_r_write
 !>      4.2002 created [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-SUBROUTINE cp_2d_r_write(array, unit_nr, el_format, error)
-    REAL(kind=dp), DIMENSION(:, :), &
-      INTENT(in)                             :: array
-    INTEGER, INTENT(in)                      :: unit_nr
-    CHARACTER(len=*), INTENT(in), OPTIONAL   :: el_format
-    TYPE(cp_error_type), INTENT(inout)       :: error
+SUBROUTINE cp_2d_[nametype1]_write(array, unit_nr, el_format, error)
+  [type1], DIMENSION(:,:), INTENT(in) :: array
+  INTEGER, INTENT(in) :: unit_nr
+  CHARACTER(len=*), INTENT(in), OPTIONAL :: el_format
+  TYPE(cp_error_type), INTENT(inout) :: error
 
-    CHARACTER(len=*), PARAMETER :: defaultFormat = "(es14.6)", &
-      routineN = 'cp_2d_r_write', routineP = moduleN//':'//routineN
-
-    CHARACTER(len=10)                        :: nRiga
-    CHARACTER(len=200)                       :: fmtstr
-    INTEGER                                  :: i, iostat
-    LOGICAL                                  :: failure
-
+  LOGICAL :: failure
+  INTEGER :: iostat, i
+  CHARACTER(len=*), PARAMETER :: routineN='cp_2d_[nametype1]_write',&
+        routineP=moduleN//':'//routineN
+  CHARACTER(len=*), PARAMETER :: defaultFormat=[defaultFormatType1]
+  CHARACTER(len=200) :: fmtstr
+  CHARACTER(len=10) :: nRiga
   failure=.FALSE.
 
   nRiga=cp_to_string(SIZE(array,2))
@@ -204,8 +200,8 @@ SUBROUTINE cp_2d_r_write(array, unit_nr, el_format, error)
         EXIT
      END IF
   END DO
-  CALL m_flush(unit_nr)
-END SUBROUTINE cp_2d_r_write
+  call m_flush(unit_nr)
+END SUBROUTINE cp_2d_[nametype1]_write
 
 ! *****************************************************************************
 !> \brief If the size of the array is changes reallocate it.
@@ -227,18 +223,16 @@ END SUBROUTINE cp_2d_r_write
 !>      3.2002 templatized [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-  SUBROUTINE cp_1d_r_guarantee_size(array, n, init, error)
-    REAL(kind=dp), DIMENSION(:), POINTER     :: array
-    INTEGER, INTENT(in)                      :: n
-    REAL(kind=dp), INTENT(in), OPTIONAL      :: init
-    TYPE(cp_error_type), INTENT(inout)       :: error
+  SUBROUTINE cp_1d_[nametype1]_guarantee_size(array, n, init, error)
+    [type1], DIMENSION(:), POINTER :: array
+    INTEGER, INTENT(in) :: n
+    [type1], INTENT(in), OPTIONAL :: init
+    TYPE(cp_error_type), INTENT(inout) :: error
 
-    CHARACTER(len=*), PARAMETER :: routineN = 'cp_1d_r_guarantee_size', &
-      routineP = moduleN//':'//routineN
-
-    INTEGER                                  :: stat
-    LOGICAL                                  :: failure
-
+    LOGICAL :: failure
+    INTEGER :: stat
+    CHARACTER(len=*), PARAMETER :: routineN='cp_1d_[nametype1]_guarantee_size',&
+         routineP=moduleN//':'//routineN
     failure=.FALSE.
 
     CPPrecondition(n>=0,cp_failure_level,routineP,error,failure)
@@ -256,7 +250,7 @@ END SUBROUTINE cp_2d_r_write
           IF (PRESENT(init).AND..NOT.failure) array=init
        END IF
     END IF failureIf
-  END SUBROUTINE cp_1d_r_guarantee_size
+  END SUBROUTINE cp_1d_[nametype1]_guarantee_size
 
 ! *****************************************************************************
 !> \brief If the size of the array is changes reallocate it.
@@ -278,19 +272,17 @@ END SUBROUTINE cp_2d_r_write
 !>      5.2001 first version [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-  SUBROUTINE cp_2d_r_guarantee_size(array, n_rows, n_cols ,&
+  SUBROUTINE cp_2d_[nametype1]_guarantee_size(array, n_rows, n_cols ,&
        init, error)
-    REAL(kind=dp), DIMENSION(:, :), POINTER  :: array
-    INTEGER, INTENT(in)                      :: n_rows, n_cols
-    REAL(kind=dp), INTENT(in), OPTIONAL      :: init
-    TYPE(cp_error_type), INTENT(inout)       :: error
+    [type1], DIMENSION(:,:), POINTER :: array
+    INTEGER, INTENT(in) :: n_rows, n_cols
+    [type1], INTENT(in), OPTIONAL :: init
+    TYPE(cp_error_type), INTENT(inout) :: error
 
-    CHARACTER(len=*), PARAMETER :: routineN = 'cp_2d_r_guarantee_size', &
-      routineP = moduleN//':'//routineN
-
-    INTEGER                                  :: stat
-    LOGICAL                                  :: failure
-
+    LOGICAL :: failure
+    INTEGER :: stat
+    CHARACTER(len=*), PARAMETER :: routineN='cp_2d_[nametype1]_guarantee_size',&
+         routineP=moduleN//':'//routineN
     failure=.FALSE.
 
     CPPrecondition(n_cols>=0,cp_failure_level,routineP,error,failure)
@@ -310,7 +302,7 @@ END SUBROUTINE cp_2d_r_write
           IF (PRESENT(init).AND..NOT.failure) array=init
        END IF
     END IF failureIf
-  END SUBROUTINE cp_2d_r_guarantee_size
+  END SUBROUTINE cp_2d_[nametype1]_guarantee_size
 
 ! *****************************************************************************
 !> \brief returns the index at which the element el should be inserted in the
@@ -329,49 +321,37 @@ END SUBROUTINE cp_2d_r_write
 !>      06.2003 created [fawzi]
 !> \author Fawzi Mohamed
 ! *****************************************************************************
-FUNCTION cp_1d_r_bsearch(array, el, l_index, u_index, error)&
-     RESULT(res)
-    REAL(kind=dp), DIMENSION(:), INTENT(in)  :: array
-    REAL(kind=dp), INTENT(in)                :: el
-    INTEGER, INTENT(in), OPTIONAL            :: l_index, u_index
-    TYPE(cp_error_type), INTENT(inout)       :: error
-    INTEGER                                  :: res
+FUNCTION cp_1d_[nametype1]_bsearch(array, el, l_index, u_index, error)&
+     result(res)
+  [type1], DIMENSION(:), intent(in) :: array
+  [type1], intent(in) :: el
+  INTEGER, INTENT(in), OPTIONAL :: l_index, u_index
+  type(cp_error_type), intent(inout) :: error
+  integer :: res
 
-    CHARACTER(len=*), PARAMETER :: routineN = 'cp_1d_r_bsearch', &
-      routineP = moduleN//':'//routineN
-
-    INTEGER                                  :: aindex, lindex, uindex
-    LOGICAL                                  :: failure
-
-  failure=.FALSE.
+  logical :: failure
+  character(len=*), parameter :: routineN='cp_1d_[nametype1]_bsearch',&
+        routineP=moduleN//':'//routineN
+  INTEGER :: lindex,uindex,aindex
+  failure=.false.
 
   lindex=1
-  uindex=SIZE(array)
-  IF (PRESENT(l_index)) lindex=l_index
-  IF (PRESENT(u_index)) uindex=u_index
+  uindex=size(array)
+  if (present(l_index)) lindex=l_index
+  if (present(u_index)) uindex=u_index
   DO WHILE (lindex <= uindex)
      aindex=(lindex+uindex)/2
-     IF (CP_R_LESS_Q(array(aindex),el)) THEN
+     IF ([lessQ](array(aindex),el)) THEN
         lindex=aindex+1
      ELSE
         uindex=aindex-1
      END IF
   END DO
   res=lindex
-END FUNCTION cp_1d_r_bsearch
+END FUNCTION cp_1d_[nametype1]_bsearch
 
   ! template def put here so that line numbers in template and derived
   ! files are almost the same (multi-line use change it a bit)
   ! [template(type1,nametype1,USE,defaultFormatType1,lessQ,defines)]
-! ARGS:
-!  USE = "USE kinds, only: dp"
-!  defaultFormatType1 = ""(es14.6)""
-!  defines = 
-!    "#define CP_R_LESS_Q(el1,el2) ( el1 < el2 )
-!     "
-!  lessQ = "CP_R_LESS_Q"
-!  nametype1 = "r"
-!  type1 = "real(kind=dp)"
 
-
-END MODULE cp_array_r_utils
+END MODULE cp_array_[nametype1]_utils
