--- a/Makefile.inc
+++ b/Makefile.inc
@@ -21,8 +21,7 @@ WFLAGS     = -Werror=aliasing -Werror=ampersand -Werror=c-binding-type \
 CFLAGS     = $(DFLAGS) -O2
 FCDEBFLAGS = -ffree-form -std=f2003 -fimplicit-none
 FCFLAGS    = $(DFLAGS) -fno-omit-frame-pointer -g -O3 \
-	     -funroll-loops -ffast-math -fopenmp $(FCDEBFLAGS) $(WFLAGS) \
-	     $(DFLAGS)
+	     -funroll-loops -ffast-math -fopenmp $(FCDEBFLAGS) $(WFLAGS)
 FCFLAGS += -fsanitize=leak
 FCFLAGS += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
 LDFLAGS    = $(FCFLAGS)
