Include compiler flags for Cray-Daint

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -1,3 +1,4 @@
+
 CC          = gcc
 CPP         =
 FC          = mpif90
@@ -20,7 +21,7 @@ WFLAGS      = -Werror=aliasing -Werror=ampersand -Werror=c-binding-type \
               -Werror=uninitialized -Wno-maybe-uninitialized -Wuse-without-only \
               -Werror
 CFLAGS      = $(DFLAGS) -O2
-FCDEBFLAGS  = -ffree-form -std=f2003 -fimplicit-none
+FCDEBFLAGS  = -ffree-form -std=f2008 -fimplicit-none -ffree-line-length-512
 FCFLAGS     = $(DFLAGS) -fno-omit-frame-pointer -g -O3 \
               -funroll-loops -ffast-math -fopenmp $(FCDEBFLAGS) $(WFLAGS)
 FCFLAGS    += -fsanitize=leak
@@ -35,4 +36,24 @@ FCFLAGS    += -D__ACC -D__DBCSR_ACC
 NVFLAGS     = $(DFLAGS) -g -arch sm_35 -w
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -L${LAPACK_PATH}/lib -llapack -lblas
 LIBS       += -lstdc++ -lcudart -lcublas
+endif
+
+ifneq ($(CRAY),)
+NVCC     = nvcc
+CC       = cc
+FC       = ftn
+LD       = ftn
+DFLAGS  += -D__HAS_smm_dnn -D__ACC -D__DBCSR_ACC
+DFLAGS  += -D__ACC_CUBLAS 
+#-D__CUDA_PROFILING
+CFLAGS   = $(WFLAGS) $(DFLAGS) -fopenmp -fno-omit-frame-pointer -g -O3 -ffast-math
+FCFLAGS  = $(WFLAGS) $(DFLAGS) -O3 -fopenmp -funroll-loops -ffast-math \
+	   -ftree-vectorize \
+           $(FCDEBFLAGS)
+LDFLAGS  = $(FCFLAGS)
+NVFLAGS  = $(DFLAGS) -O3 -w -arch sm_60 --std=c++11
+LIBS     = -lfftw3 -lfftw3_threads
+LIBS    += /users/alazzaro/project/libsmm/libxsmm/haswell/lib/libsmm_dnn_cray.gnu.a
+LIBS    += -lcublas -lstdc++
+#LIBS    += -lnvToolsExt
 endif
