JIT kernels (prev: generated at compile time) - Move to CUDA driver API in libcusmm - JIT transpose kernels as well - Add 'logging' mode for more conveniante debugging - Initialize the driver API once - Adapt includes - Adapt Makefile - Adapt kernels to JIT-ting - Adapt testing

--- a/Makefile.inc
+++ b/Makefile.inc
@@ -43,7 +43,7 @@ DFLAGS     += -D__ACC -D__DBCSR_ACC
 FCFLAGS    += -D__ACC -D__DBCSR_ACC
 NVFLAGS     = $(DFLAGS) -O3 -g -arch sm_35 -w
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -L${LAPACK_PATH}/lib -llapack -lblas
-LIBS       += -lstdc++ -lcudart -lcublas
+LIBS       += -lstdc++ -lcudart -lcublas -lnvrtc -lcuda
 endif
 
 ifneq ($(CRAY),)
