Store handles to kernel in table - add this functionality - add logging - refactor - add test

--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -19,4 +19,7 @@ dbcsr_tensor_unittest: BIN_DEPS =
 ifneq ($(NVCC),)
 SRC_TESTS += libcusmm_unittest.cu
 libcusmm_unittest: BIN_DEPS =
+
+SRC_TESTS += libcusmm_reusehandle_test.cu
+libcusmm_reusehandle_test: BIN_DEPS =
 endif
