--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ addons:
     packages:
       - gfortran
       - libopenblas-dev
+      - liblapack-dev
       - libopenmpi-dev
 
 script:
-  - make -j DFLAGS="-D__MPI_VERSION=3 -D__parallel -D__HAS_NO_SHARED_GLIBC -D__STATM_TOTAL" LIBS="-llapack -lblas" all
+  - make -j FC="mpif90" LD="mpif90" DFLAGS="-D__MPI_VERSION=2 -D__parallel -D__HAS_NO_SHARED_GLIBC -D__STATM_TOTAL" LIBS="-llapack -lblas" all
