--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -2,6 +2,9 @@
 SRC_TESTS += dbcsr_performance_driver.F
 dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
 
+SRC_TESTS += test_mm.F
+test_mm: BIN_DEPS = 
+
 SRC_TESTS += dbcsr_test_csr_conversions.F
 dbcsr_test_csr_conversions: BIN_DEPS =
 
