--- a/Makefile.inc
+++ b/Makefile.inc
@@ -24,8 +24,10 @@ CFLAGS      = $(DFLAGS) -O2
 FCDEBFLAGS  = -ffree-form -std=f2003 -fimplicit-none -ffree-line-length-512
 FCFLAGS     = $(DFLAGS) -fno-omit-frame-pointer -g -O3 \
               -funroll-loops -ffast-math -fopenmp $(FCDEBFLAGS) $(WFLAGS)
-#FCFLAGS    += -fsanitize=leak
-#FCFLAGS    += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
+ifneq ($(CHECKS),)
+FCFLAGS    += -fsanitize=leak
+FCFLAGS    += -fcheck=bounds,do,recursion,pointer -Wconversion -fbacktrace
+endif
 LDFLAGS     = $(FCFLAGS)
 LIBS        = -L${SCALAPACK_PATH}/lib -lscalapack -lreflapack -lrefblas
 
