--- a/tests/Makefile.inc
+++ b/tests/Makefile.inc
@@ -1,4 +1,6 @@
 
+UNITTESTS = dbcsr_unittest dbcsr_tensor_unittest dbcsr_test_csr_conversions
+
 SRC_TESTS += dbcsr_performance_driver.F
 dbcsr_performance_driver: BIN_DEPS = dbcsr_performance_multiply.o
 
