travis.yml: use test target to get coverage report

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ addons:
       - libopenblas-dev
       - liblapack-dev
       - libopenmpi-dev
+      - openmpi-bin
 
 script:
-  - make -j FC="mpif90" LD="mpif90" DFLAGS="-D__MPI_VERSION=2 -D__parallel -D__HAS_NO_SHARED_GLIBC -D__STATM_TOTAL" LIBS="-llapack -lblas" all
+  - make -j FC="mpif90" LD="mpif90" CFLAGS="-fprofile-arcs -ftest-coverage -O0" FCFLAGS="-fopenmp -fprofile-arcs -ftest-coverage -O0" DFLAGS="-D__MPI_VERSION=2 -D__parallel -D__HAS_NO_SHARED_GLIBC -D__STATM_TOTAL" LIBS="-llapack -lblas" all
+  - make test
+
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
